@@ -1,37 +1,39 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
-      lang="en"
-      metal:use-macro="here/main_template/macros/master"
-      i18n:domain="plone">
-<body>
+  lang="en"
+  metal:use-macro="here/main_template/macros/master"
+  i18n:domain="plone">
+  <body>
 
-<div metal:fill-slot="main"
-     tal:define="proxy context/@@proxy_view;
-                 view proxy/real_view;
-                 items view/full_items;
-                 Batch python: modules['Products.CMFPlone'].Batch;
-                 b_size python: 20;
-                 b_start python: 0;
-                 b_start request/b_start | b_start">
+    <div metal:fill-slot="main"
+      tal:define="
+      view_name view_name | request/view_name;
+      portlet python:path('context/@@'+view_name);
+      view nocall:portlet;
+      items view/full_items;
+      Batch python: modules['Products.CMFPlone'].Batch;
+      b_size python: 20;
+      b_start python: 0;
+      b_start request/b_start | b_start">
 
-    <div tal:define="batch python: Batch(items, b_size, int(b_start), orphan=1)"
-         tal:condition="items">
+      <div tal:define="batch python: Batch(items, b_size, int(b_start), orphan=1)"
+        tal:condition="items">
         <div metal:use-macro="here/batch_macros/macros/navigation" />
 
         <ul tal:repeat="item batch">
-            <li class="allitems">
-                <a href="" tal:attributes="href item/url"
-                           tal:content="item/title" />
-                <p tal:condition="item/body|nothing"
-                   tal:replace="structure item/body" />
-                <br tal:condition="not: item/body|nothing" />
-                Published: <span tal:replace="item/published" />
-            </li>
+          <li class="allitems">
+            <a href="" tal:attributes="href item/url"
+              tal:content="item/title" />
+            <p tal:condition="item/body|nothing"
+              tal:replace="structure item/body" />
+            <br tal:condition="not: item/body|nothing" />
+            Published: <span tal:replace="item/published" />
+          </li>
         </ul>
 
         <div metal:use-macro="here/batch_macros/macros/navigation" />
+      </div>
+
     </div>
 
-</div>
-
-</body>
+  </body>
 </html>
